# Hashcode2018

./: CMakeLists.txt  path.ini
include/: log.hpp  parser.hpp  ride.hpp  serializer.hpp  vehicle.hpp
output/: b_should_be_easy.out  c_no_hurry.out  d_metropolis.out  e_high_bonus.out
src/: main.cpp  parser.cpp  serializer.cpp  vehicle.cpp
